--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<header>
+  <a>
+    <img src="img/logo.png" width="220" heigth="47" alt="Логотип Техномарта">
+  </a>
+  <lable for="s-search">
+    <img src="img/Shape.png">
+  </lable>
+  <input id="s-search" type="text" name="search" placeholder="Поиск:">
+  <img src="img/Закладка.png">
+  <a href="blank.html">Закладки:0</a>
+  <img src="img/icon-cart.png">
+  <a href="blank.html">Корзина:0</a>
+  <button type="button">Оформить заказ</button>
+  
+</header>
+    
 
   </body>
 </html>
