Средняя часть шапки

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
   <img src="img/icon-cart.png">
   <a href="blank.html">Корзина:0</a>
   <button type="button">Оформить заказ</button>
+  <section>
+    <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
+    <img src="img/Phone.png">
+    <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    <img src="img/icon-login.png">
+    <button type="button">Войти</button>
+    <button type="button">Регистрация</button>
+  </section>
   
 </header>
     
