--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <button type="button">Войти</button>
     <button type="button">Регистрация</button>
   </section>
+  <section>
+    <ul>
+      <li><a href="#">Главная</a></li>
+      <li><a href="#">Компания</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="#">Спецпредложения</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+  </section>
   
 </header>
     
