Часть с промо-блоком

--- a/index.html
+++ b/index.html
@@ -40,7 +40,43 @@
   </section>
   
 </header>
-    
+    <main>
+<section>
+  <h1>Промо-блок</h1> <!--Не будет на странице-->
+  <ul>
+    <li>
+      <h2>Перфораторы</h2>
+      <h4>Настоящие мужские игрушки</h4>
+     <a href="catalog.html"> <button type="button">Открыть каталог</button></a>
+    </li>
+    <li>
+      <h3>Материалы</h3> 
+      <button type="button">На любой вкус</button>
+    </li>
+    <li>
+      <h3>Инструмент</h3> 
+      <button type="button">На вс случаи</button>
+    </li>
+    <li>
+      <h3>Техника</h3> 
+      <button type="button">Для стройки</button>
+    </li>
+    <li>
+      <h3>Скидки 50 %</h3> 
+      <button type="button">На 350 товаров</button>
+    </li>
+    <li>
+      <h3>Доставка</h3> 
+      <button type="button">Бесплатно</button>
+    </li>
+  </ul>
+
+</section>
+
+
+
+
+    </main>
 
   </body>
 </html>
