--- a/index.html
+++ b/index.html
@@ -72,7 +72,36 @@
   </ul>
 
 </section>
-
+<section>
+  <h2>Популярные товары</h2>
+  <button type="button">Все популярные товары</button>
+  <ul>
+    <li>
+      <a href="#"><img src="img/Per1.png"></a>
+      <a href="#"><h3>Перфоратор BOSCH <br> BFG 9000</h3></a>
+      <del>32500 Р.</del>
+      <button type="button">25500 Р.</button>
+    </li>
+    <li>
+      <a href="#"><img src="img/Per2.png"></a>
+      <a href="#"><h3>Перфоратор BOSCH <br> BFG 3000</h3></a>
+      <del>22500 Р.</del>
+      <button type="button">15500 Р.</button>
+    </li>
+    <li>
+      <a href="#"><img src="img/Per3.png"></a>
+      <a href="#"><h3>Перфоратор BOSCH <br> BFG 6000</h3></a>
+      <del>30500 Р.</del>
+      <button type="button">25500 Р.</button>
+    </li>
+    <li>
+      <a href="#"><img src="img/Per4.png"></a>
+      <a href="#"><h3>Перфоратор BOSCH <br> BFG 2000</h3></a>
+      <del>22500 Р.</del>
+      <button type="button">12500 Р.</button>
+    </li>
+  </ul>
+</section>
 
 
 
