--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </section>
 <section>
   <h2>Популярные товары</h2>
-  <button type="button">Все популярные товары</button>
+  <button type="button">Все популярные товары:</button>
   <ul>
     <li>
       <a href="#"><img src="img/Per1.png"></a>
@@ -103,8 +103,29 @@
   </ul>
 </section>
 
-
-
+<section>
+  <h2>Популярные производители:</h2>
+  <button type="button">Все производители</button>
+  <ul>
+    <li>
+      <a href="#"><img src="img/Proiz1.png"></a>
+    </li>
+    <li>
+      <a href="#"><img src="img/Makita (1).png"></a>
+    </li> <li>
+      <a href="#"><img src="img/DeWALT.png"></a>
+    </li> <li>
+      <a href="#"><img src="img/Интерскол 1.png"></a>
+    </li> <li>
+      <a href="#"><img src="img/Hitachi.png"></a>
+    </li> <li>
+      <a href="#"><img src="img/LG.png"></a>
+    </li> <li>
+      <a href="#"><img src="img/AEG.png"></a>
+    </li> <li>
+      <a href="#"><img src="img/Metabo.png"></a>
+    </li>
+  </ul>
     </main>
 
   </body>
