--- a/index.html
+++ b/index.html
@@ -112,20 +112,48 @@
     </li>
     <li>
       <a href="#"><img src="img/Makita (1).png"></a>
-    </li> <li>
+    </li> 
+    <li>
       <a href="#"><img src="img/DeWALT.png"></a>
-    </li> <li>
+    </li>
+     <li>
       <a href="#"><img src="img/Интерскол 1.png"></a>
-    </li> <li>
+    </li>
+     <li>
       <a href="#"><img src="img/Hitachi.png"></a>
-    </li> <li>
+    </li>
+     <li>
       <a href="#"><img src="img/LG.png"></a>
-    </li> <li>
+    </li>
+     <li>
       <a href="#"><img src="img/AEG.png"></a>
-    </li> <li>
+    </li>
+     <li>
       <a href="#"><img src="img/Metabo.png"></a>
     </li>
   </ul>
+  </section>
+  <section>
+    <h2>Сервисы</h2>
+    <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+      Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+<ul>
+  <li>
+    Доставка
+    <h2>Доставка</h2>
+    <p>Мы с удовольствием доставим ваш товар прямо <br>
+      к вашему подъезду совершенно бесплатно!<br>
+      Ведь мы неплохо заработаем, <br>
+      поднимая его на ваш этаж!</p>
+  </li>
+  <li>
+    Гарантия
+  </li>
+  <li>
+    Кредит
+  </li>
+</ul>
+  </section>
     </main>
 
   </body>
