--- a/index.html
+++ b/index.html
@@ -154,6 +154,26 @@
   </li>
 </ul>
   </section>
+  <section>
+    <h2>Компания «Техномарт»</h2>
+    <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>
+       ремонта и строительства не оставит равнодушными любителей сэкономить на <br> гастарбайтерах.</p>
+
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+      Техномарт работает со многими транспортными компаниями:</p>
+      <ul>
+        <li>
+          Деловые линии
+        </li>
+        <li>
+          Автотрейдинг
+        </li>
+        <li>
+          ЖелДорЭкспедиция
+        </li>
+      </ul>
+      <button type="button">Подробнее о компании</button>
+  </section>
     </main>
 
   </body>
