--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
       </ul>
       <button type="button">Подробнее о компании</button>
   </section>
+  <section>
+    <h2>Контакты</h2>
+    <p>Вы можете забрать товар сами, <br>
+      заехав в наш офис:</p>
+      <a href="blank.html"><img src="img/Map.png"></a>
+      <button type="button">Заблудились? Напишите нам</button>
+  </section>
     </main>
 
   </body>
