--- a/index.html
+++ b/index.html
@@ -182,6 +182,47 @@
       <button type="button">Заблудились? Напишите нам</button>
   </section>
     </main>
-
+  <footer>
+    <a>
+      <img src="img/logo.png" width="220" heigth="47" alt="Логотип Техномарта">
+    </a>
+    <ul>
+      <li><a href="#">Компания</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+    <ul>
+      <li><a href="#">Материалы</a></li>
+      <li><a href="#">Техника</a></li>
+      <li><a href="#">Инструмент</a></li>
+      <li><a href="#">Спецпредложени</a></li>
+    </ul>
+    <section>
+      <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    
+    <p>
+      Обратная связь:
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </p>
+    <p>
+      Разработано -
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy.ru</a>
+    </p>
+    
+  </footer>
   </body>
 </html>
