--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
   </head>
   <body>
 <header>
-  <a>
-    <img src="img/logo.png" width="220" heigth="47" alt="Логотип Техномарта">
-  </a>
-  <lable for="s-search">
-    <img src="img/Shape.png">
-  </lable>
+  <section>
+  <h2>Здесь будет логотип Техномарта с помощью CSS</h2>
+  <form action="#" method="get">
   <input id="s-search" type="text" name="search" placeholder="Поиск:">
-  <img src="img/Закладка.png">
+  </form>
   <a href="blank.html">Закладки:0</a>
-  <img src="img/icon-cart.png">
   <a href="blank.html">Корзина:0</a>
   <button type="button">Оформить заказ</button>
+</section>
   <section>
     <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
     <img src="img/Phone.png">
     <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-    <img src="img/icon-login.png">
+    <nav>
     <button type="button">Войти</button>
     <button type="button">Регистрация</button>
+    </nav>
   </section>
   <section>
     <ul>
@@ -44,18 +42,25 @@
 <section>
   <h1>Промо-блок</h1> <!--Не будет на странице-->
   <ul>
+    <!--Слайдер-->
     <li>
       <h2>Перфораторы</h2>
       <h4>Настоящие мужские игрушки</h4>
-     <a href="catalog.html"> <button type="button">Открыть каталог</button></a>
     </li>
+    <li>
+      <h2>Дрели</h2>
+      <h4>Соседям на радость!</h4>
+    </li>
+    <a href="catalog.html"> <button type="button">Открыть каталог</button></a>
+  </ul>
+  <ul>
     <li>
       <h3>Материалы</h3> 
       <button type="button">На любой вкус</button>
     </li>
     <li>
       <h3>Инструмент</h3> 
-      <button type="button">На вс случаи</button>
+      <button type="button">На все случаи</button>
     </li>
     <li>
       <h3>Техника</h3> 
@@ -77,28 +82,36 @@
   <button type="button">Все популярные товары:</button>
   <ul>
     <li>
-      <a href="#"><img src="img/Per1.png"></a>
-      <a href="#"><h3>Перфоратор BOSCH <br> BFG 9000</h3></a>
+      <img src="img/Per1.png">
+      <h3>Перфоратор BOSCH <br> BFG 9000</h3>
       <del>32500 Р.</del>
-      <button type="button">25500 Р.</button>
+      <p>25500 Р.</p>
+      <button type="button">Купить</button>
+      <button type="button">В закладки</button>
     </li>
     <li>
-      <a href="#"><img src="img/Per2.png"></a>
-      <a href="#"><h3>Перфоратор BOSCH <br> BFG 3000</h3></a>
+      <img src="img/Per2.png">
+      <h3>Перфоратор BOSCH <br> BFG 3000</h3>
       <del>22500 Р.</del>
-      <button type="button">15500 Р.</button>
+      <p>15500 Р.</p>
+      <button type="button">Купить</button>
+      <button type="button">В закладки</button>
     </li>
     <li>
-      <a href="#"><img src="img/Per3.png"></a>
-      <a href="#"><h3>Перфоратор BOSCH <br> BFG 6000</h3></a>
+      <img src="img/Per3.png">
+      <h3>Перфоратор BOSCH <br> BFG 6000</h3>
       <del>30500 Р.</del>
-      <button type="button">25500 Р.</button>
+      <p>25500 Р.</p>
+      <button type="button">Купить</button>
+      <button type="button">В закладки</button>
     </li>
     <li>
-      <a href="#"><img src="img/Per4.png"></a>
-      <a href="#"><h3>Перфоратор BOSCH <br> BFG 2000</h3></a>
+      <img src="img/Per4.png">
+      <h3>Перфоратор BOSCH <br> BFG 2000</h3>
       <del>22500 Р.</del>
-      <button type="button">12500 Р.</button>
+      <p>12500 Р.</p>
+      <button type="button">Купить</button>
+      <button type="button">В закладки</button>
     </li>
   </ul>
 </section>
@@ -193,7 +206,7 @@
       <li><a href="#">Доставка</a></li>
       <li><a href="#">Контакты</a></li>
     </ul>
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>+7 (812) 555-05-55</p>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
     <ul>
       <li><a href="#">Материалы</a></li>
       <li><a href="#">Техника</a></li>
