--- a/catalog.html
+++ b/catalog.html
@@ -6,18 +6,109 @@
       </head>
       <body>
           <header>
-            <a href="index.html">
-                <img src="img/logo.png" width="220" heigth="47" alt="Логотип Техномарта">
-              </a>
-              <lable for="s-search">
-                <img src="img/Shape.png">
-              </lable>
+            <section>
+             <a><h2>Здесь будет логотип Техномарта с помощью CSS</h2></a>
+              <form action="#" method="get">
               <input id="s-search" type="text" name="search" placeholder="Поиск:">
-              <img src="img/Закладка.png">
+              </form>
               <a href="blank.html">Закладки:0</a>
-              <img src="img/icon-cart.png">
               <a href="blank.html">Корзина:10</a>
               <button type="button">Оформить заказ</button>
+            </section>
+              <section>
+                <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
+                <img src="img/Phone.png">
+                <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+                <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <nav>
+                <button type="button">Равшан Джамшутович</button>
+                <ul>
+                  <li>
+                    <a href="#"><h4>Мои заказы</h4></a>
+                  </li>
+                  <li>
+                    <a href="#"><h4>Личный кабинет</h4></a>
+                  </li>
+                </ul>
+                </nav>
+              </section>
+              <section>
+                <ul>
+                  <li><a href="#">Главная</a></li>
+                  <li><a href="#">Компания</a></li>
+                  <li><a href="catalog.html">Каталог</a></li>
+                  <li><a href="#">Новости</a></li>
+                  <li><a href="#">Спецпредложения</a></li>
+                  <li><a href="#">Доставка</a></li>
+                  <li><a href="#">Контакты</a></li>
+                </ul>
+              </section>
+              
           </header>
+          <main>
+            <ul>
+              <li>
+                <a href="index.html"><p>Знак главной страницы</p></a> <!--Поменяется на значок дома-->
+              </li>
+              <li>
+                <a href="catalog.html">Каталог</a>
+              </li>
+              <li>
+                <a href="#">Инструмент</a>
+              </li>
+              <li>
+                Перфораторы
+              </li>
+            </ul>
+            <h3>Перфораторы</h3>
+            <section>
+              <h2>Фильтр</h2>
+              <form method="get" action="https://echo.htmlacademy.ru">
+                <fieldset>
+                  <legend>Цена</legend>
+                  <p>0-30000</p>
+                </fieldset>
+                <fieldset>
+                  <legend>Производители</legend>
+                  <ul>
+                    <li>
+                      <input type="checkbox" name="bosch" id="filter-bosch" checked>
+                      <label for="filter-bosch">Bosch</label>
+                    </li>
+                    <li>
+                      <input type="checkbox" name="interscol" id="filter-interscol">
+                      <label for="filter-interscol">Интерскол</label>
+                    </li>
+                    <li>
+                      <input type="checkbox" name="nakita" id="filter-nakita" checked>
+                      <label for="filter-nakita">Nakita</label>
+                      <li>
+                        <input type="checkbox" name="dewalt" id="filter-dewalt">
+                        <label for="filter-dewalt">Dewalt</label>
+                      </li>
+                      <li>
+                        <input type="checkbox" name="hitachi" id="filter-hitachi">
+                        <label for="filter-hitachi">Hitachi</label>
+                      </li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                  <lable>Питание</lable>
+                  <ul>
+                    <li>
+                      <input type="radio" name="supply" value="battery" id="filter-battery" checked>
+            <label for="filter-battery">Аккумуляторные</label>
+                    </li>
+                    <li>
+                      <input type="radio" name="supply" value="network" id="filter-network">
+            <label for="filter-network">Сетевые</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <button type="button">Показать</button>
+                </form>
+            </section>
+
+          </main>
       </body>
 </html>
