--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
       <body>
           <header>
             <section>
-             <a><h2>Здесь будет логотип Техномарта с помощью CSS</h2></a>
+             <a><h2>Техномарт</h2></a>
               <form action="#" method="get">
               <input id="s-search" type="text" name="search" placeholder="Поиск:">
               </form>
@@ -17,10 +17,8 @@
             </section>
               <section>
                 <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-                <img src="img/Phone.png">
-                <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-                <nav>
                 <button type="button">Равшан Джамшутович</button>
                 <ul>
                   <li>
@@ -30,9 +28,8 @@
                     <a href="#"><h4>Личный кабинет</h4></a>
                   </li>
                 </ul>
-                </nav>
               </section>
-              <section>
+              <nav>
                 <ul>
                   <li><a href="#">Главная</a></li>
                   <li><a href="#">Компания</a></li>
@@ -42,7 +39,7 @@
                   <li><a href="#">Доставка</a></li>
                   <li><a href="#">Контакты</a></li>
                 </ul>
-              </section>
+              </nav>
               
           </header>
           <main>
