--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <header>
   <section>
-  <h2>Здесь будет логотип Техномарта с помощью CSS</h2>
+  <h2>Техномарт</h2>
   <form action="#" method="get">
   <input id="s-search" type="text" name="search" placeholder="Поиск:">
   </form>
@@ -17,15 +17,12 @@
 </section>
   <section>
     <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-    <img src="img/Phone.png">
-    <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
     <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-    <nav>
     <button type="button">Войти</button>
     <button type="button">Регистрация</button>
-    </nav>
   </section>
-  <section>
+  <nav>
     <ul>
       <li><a href="#">Главная</a></li>
       <li><a href="#">Компания</a></li>
@@ -34,7 +31,7 @@
       <li><a href="#">Спецпредложения</a></li>
       <li><a href="#">Доставка</a></li>
       <li><a href="#">Контакты</a></li>
-    </ul>
+    </nav>
   </section>
   
 </header>
@@ -46,12 +43,13 @@
     <li>
       <h2>Перфораторы</h2>
       <h4>Настоящие мужские игрушки</h4>
+      <a href="catalog.html">Открыть каталог</a>
     </li>
     <li>
       <h2>Дрели</h2>
       <h4>Соседям на радость!</h4>
+      <a href="catalog.html">Открыть каталог</a>
     </li>
-    <a href="catalog.html"> <button type="button">Открыть каталог</button></a>
   </ul>
   <ul>
     <li>
@@ -85,7 +83,7 @@
       <img src="img/Per1.png">
       <h3>Перфоратор BOSCH <br> BFG 9000</h3>
       <del>32500 Р.</del>
-      <p>25500 Р.</p>
+      <ins>25500 Р.</ins>
       <button type="button">Купить</button>
       <button type="button">В закладки</button>
     </li>
@@ -93,7 +91,7 @@
       <img src="img/Per2.png">
       <h3>Перфоратор BOSCH <br> BFG 3000</h3>
       <del>22500 Р.</del>
-      <p>15500 Р.</p>
+      <ins>15500 Р.</ins>
       <button type="button">Купить</button>
       <button type="button">В закладки</button>
     </li>
@@ -101,7 +99,7 @@
       <img src="img/Per3.png">
       <h3>Перфоратор BOSCH <br> BFG 6000</h3>
       <del>30500 Р.</del>
-      <p>25500 Р.</p>
+      <ins>25500 Р.</ins>
       <button type="button">Купить</button>
       <button type="button">В закладки</button>
     </li>
@@ -109,7 +107,7 @@
       <img src="img/Per4.png">
       <h3>Перфоратор BOSCH <br> BFG 2000</h3>
       <del>22500 Р.</del>
-      <p>12500 Р.</p>
+      <ins>12500 Р.</ins>
       <button type="button">Купить</button>
       <button type="button">В закладки</button>
     </li>
@@ -124,13 +122,13 @@
       <a href="#"><img src="img/Proiz1.png"></a>
     </li>
     <li>
-      <a href="#"><img src="img/Makita (1).png"></a>
+      <a href="#"><img src="img/Makita1.png"></a>
     </li> 
     <li>
       <a href="#"><img src="img/DeWALT.png"></a>
     </li>
      <li>
-      <a href="#"><img src="img/Интерскол 1.png"></a>
+      <a href="#"><img src="img/Интерскол1.png"></a>
     </li>
      <li>
       <a href="#"><img src="img/Hitachi.png"></a>
@@ -150,14 +148,11 @@
     <h2>Сервисы</h2>
     <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
       Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+      <div>
+        <section>
 <ul>
   <li>
     Доставка
-    <h2>Доставка</h2>
-    <p>Мы с удовольствием доставим ваш товар прямо <br>
-      к вашему подъезду совершенно бесплатно!<br>
-      Ведь мы неплохо заработаем, <br>
-      поднимая его на ваш этаж!</p>
   </li>
   <li>
     Гарантия
@@ -166,6 +161,16 @@
     Кредит
   </li>
 </ul>
+       </section>
+       <section>
+    <h3>Доставка</h3>
+    <p>Мы с удовольствием доставим ваш товар прямо <br>
+      к вашему подъезду совершенно бесплатно!<br>
+      Ведь мы неплохо заработаем, <br>
+      поднимая его на ваш этаж!</p>
+      <img src="img/truck.svg" alt="truck" width="468" height="261">
+      </section>
+      </div>
   </section>
   <section>
     <h2>Компания «Техномарт»</h2>
@@ -191,14 +196,12 @@
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, <br>
       заехав в наш офис:</p>
-      <a href="blank.html"><img src="img/Map.png"></a>
+      <!--	map placeholder	-->
       <button type="button">Заблудились? Напишите нам</button>
   </section>
     </main>
   <footer>
-    <a>
-      <img src="img/logo.png" width="220" heigth="47" alt="Логотип Техномарта">
-    </a>
+    <h2>Техномарт</h2>
     <ul>
       <li><a href="#">Компания</a></li>
       <li><a href="#">Новости</a></li>
