--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
       <body>
           <header>
             <section>
-             <a><h2>Техномарт</h2></a>
+             <a href="index.html"><h2>Техномарт</h2></a>
               <form action="#" method="get">
               <input id="s-search" type="text" name="search" placeholder="Поиск:">
               </form>
@@ -31,7 +31,7 @@
               </section>
               <nav>
                 <ul>
-                  <li><a href="#">Главная</a></li>
+                  <li><a href="index.html">Главная</a></li>
                   <li><a href="#">Компания</a></li>
                   <li><a href="catalog.html">Каталог</a></li>
                   <li><a href="#">Новости</a></li>
@@ -102,10 +102,172 @@
                     </li>
                   </ul>
                 </fieldset>
-                <button type="button">Показать</button>
+                <button type="submit">Показать</button>
                 </form>
             </section>
-
+            <section>
+              <h2>Сортировка:</h2>
+              <ul>
+                <li>
+                  <a href="#">По цене</a>
+                </li>
+                <li>
+                  <a>По типу</a>
+                </li>
+                <li>
+                  <a>По функционалу</a>
+                </li>
+              </ul>
+            </section>
+           <section>
+             <h3>Список перфораторов</h3>
+             <ul>
+               <li>
+                <img src="img/Per3.png">
+                <h3>Перфоратор BOSCH <br> BFG 6000</h3>
+                <del>30500 Р.</del>
+                <ins>25500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per3.png">
+                <h3>Перфоратор BOSCH <br> BFG 6000</h3>
+                <del>30500 Р.</del>
+                <ins>25500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per3.png">
+                <h4>new</h4>
+                <h3>Перфоратор BOSCH <br> BFG 6000</h3>
+                <del>30500 Р.</del>
+                <ins>25500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per2.png">
+                <h4>new</h4>
+                <h3>Перфоратор BOSCH <br> BFG 3000</h3>
+                <del>22500 Р.</del>
+                <ins>15500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per3.png">
+                <h3>Перфоратор BOSCH <br> BFG 6000</h3>
+                <del>30500 Р.</del>
+                <ins>25500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per2.png">
+                <h4>new</h4>
+                <h3>Перфоратор BOSCH <br> BFG 2000</h3>
+                <ins>12500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per2.png">
+                <h4>new</h4>
+                <h3>Перфоратор BOSCH <br> BFG 3000</h3>
+                <del>22500 Р.</del>
+                <ins>15500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per3.png">
+                <h3>Перфоратор BOSCH <br> BFG 6000</h3>
+                <del>30500 Р.</del>
+                <ins>25500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+               <li>
+                <img src="img/Per2.png">
+                <h4>new</h4>
+                <h3>Перфоратор BOSCH <br> BFG 2000</h3>
+                <ins>12500 Р.</ins>
+                <button type="button">Купить</button>
+                <button type="button">В закладки</button>
+               </li>
+             </ul>
+            <div>
+              <ul>
+                <li>
+                  <a>1</a>
+                </li>
+                <li>
+                  <a href="#">2</a>
+                </li>
+                <li>
+                  <a href="#">3</a>
+                </li>
+              </ul>
+              <button type="button">Следующая</button>
+            </div>
+           </section>
+           <section>
+             <h3>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h3>
+             <p>Перфоратор — универсальный строительный инструмент. 
+               Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+              Существуют электромеханические и пневматические перфораторы. 
+              Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br> 
+              В ассортиментном ряду есть выбор «трехрежимников»: 
+              в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+             </section>
           </main>
+          <footer>
+            <h2>Техномарт</h2>
+            <ul>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br><a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+            <ul>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложени</a></li>
+            </ul>
+            <section>
+              <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+              <ul>
+                <li>
+                  <a href="#">Вконтакте</a>
+                </li>
+                <li>
+                  <a href="#">Фейсбук</a>
+                </li>
+                <li>
+                  <a href="#">Инстаграм</a>
+                </li>
+              </ul>
+            
+            <p>
+              Обратная связь:
+              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p>
+              Разработано -
+              <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy.ru</a>
+            </p>
+          </footer>
+          <section>
+            <h2>Добавление в корзину</h2>
+            <p>Товар добавлен в корзину!</p>
+            <button type="button">Оформить заказ</button>
+            <button type="button">Продолжить покупки</button>
+            <button type="button">Закрыть</button>
+          </section>
       </body>
 </html>
