--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,9 @@
                 <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
                 <a href="tel:+78125550555">+7 (812) 555-05-55</a>
                 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-                <button type="button">Равшан Джамшутович</button>
+                <a href="#">Иконка человек</a>
+                <a href="#">Равшан Джамшутович</a>
+                <a href="#">Иконка вход</a>
                 <ul>
                   <li>
                     <a href="#"><h4>Мои заказы</h4></a>
@@ -45,7 +47,7 @@
           <main>
             <ul>
               <li>
-                <a href="index.html"><p>Знак главной страницы</p></a> <!--Поменяется на значок дома-->
+                <a href="index.html">Знак главной страницы</a> <!--Поменяется на значок дома-->
               </li>
               <li>
                 <a href="catalog.html">Каталог</a>
@@ -57,12 +59,15 @@
                 Перфораторы
               </li>
             </ul>
-            <h3>Перфораторы</h3>
+            <h1>Перфораторы</h1>
             <section>
               <h2>Фильтр</h2>
               <form method="get" action="https://echo.htmlacademy.ru">
                 <fieldset>
                   <legend>Цена</legend>
+                  <input type="range" min="0" max="30000" step="1" value="12500">
+                  <input type="number" min="0" max="30000">
+                  <input type="number" min="0" max="30000">
                   <p>0-30000</p>
                 </fieldset>
                 <fieldset>
@@ -90,7 +95,7 @@
                     </ul>
                 </fieldset>
                 <fieldset>
-                  <lable>Питание</lable>
+                  <label>Питание</label>
                   <ul>
                     <li>
                       <input type="radio" name="supply" value="battery" id="filter-battery" checked>
@@ -112,10 +117,10 @@
                   <a href="#">По цене</a>
                 </li>
                 <li>
-                  <a>По типу</a>
+                  <a href="#">По типу</a>
                 </li>
                 <li>
-                  <a>По функционалу</a>
+                  <a href="#">По функционалу</a>
                 </li>
               </ul>
             </section>
@@ -140,7 +145,6 @@
                </li>
                <li>
                 <img src="img/Per3.png">
-                <h4>new</h4>
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -148,8 +152,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png">
-                <h4>new</h4>
+                <img src="img/Per2.png">>
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -166,7 +169,6 @@
                </li>
                <li>
                 <img src="img/Per2.png">
-                <h4>new</h4>
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
@@ -174,7 +176,6 @@
                </li>
                <li>
                 <img src="img/Per2.png">
-                <h4>new</h4>
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -191,7 +192,6 @@
                </li>
                <li>
                 <img src="img/Per2.png">
-                <h4>new</h4>
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
@@ -209,12 +209,14 @@
                 <li>
                   <a href="#">3</a>
                 </li>
+                <li>
+                  <a href="#">Следующая</a>
+                </li>
               </ul>
-              <button type="button">Следующая</button>
             </div>
            </section>
            <section>
-             <h3>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h3>
+             <h3>Пара слов о перфораторах</h3>
              <p>Перфоратор — универсальный строительный инструмент. 
                Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
               Существуют электромеханические и пневматические перфораторы. 
@@ -261,6 +263,7 @@
               Разработано -
               <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy.ru</a>
             </p>
+            </section>
           </footer>
           <section>
             <h2>Добавление в корзину</h2>
