--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,7 @@
              <h3>Список перфораторов</h3>
              <ul>
                <li>
-                <img src="img/Per3.png">
+                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -153,7 +153,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png">
+                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -161,7 +161,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png">
+                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -169,7 +169,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png">>
+                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -177,7 +177,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png">
+                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -185,14 +185,14 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png">
+                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png">
+                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -200,7 +200,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png">
+                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -208,7 +208,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png">
+                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
