--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="favicon32.ico">
+    <link rel="icon" href="img/icons/32.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/icons/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
 <header>
@@ -11,8 +15,8 @@
   <form action="#" method="get">
   <input id="s-search" type="text" name="search" placeholder="Поиск:">
   </form>
-  <a href="blank.html">Закладки:0</a>
-  <a href="blank.html">Корзина:0</a>
+  <a href="#">Закладки:0</a>
+  <a href="#">Корзина:0</a>
   <button type="button">Оформить заказ</button>
 </section>
   <section>
@@ -54,23 +58,23 @@
   <ul>
     <li>
       <h3>Материалы</h3> 
-      <button type="button">На любой вкус</button>
+      <a href="#">На любой вкус</a>
     </li>
     <li>
       <h3>Инструмент</h3> 
-      <button type="button">На все случаи</button>
+      <a href="#">На все случаи</a>
     </li>
     <li>
       <h3>Техника</h3> 
-      <button type="button">Для стройки</button>
+      <a href="#">Для стройки</a>
     </li>
     <li>
       <h3>Скидки 50 %</h3> 
-      <button type="button">На 350 товаров</button>
+      <a href="#">На 350 товаров</a>
     </li>
     <li>
       <h3>Доставка</h3> 
-      <button type="button">Бесплатно</button>
+      <a href="#">Бесплатно</a>
     </li>
   </ul>
 
@@ -80,7 +84,7 @@
   <button type="button">Все популярные товары:</button>
   <ul>
     <li>
-      <img src="img/Per1.png">
+      <img src="img/Per1.png" width="184" heigth="164" alt="Перфоратор BOSCH BFG 9000">
       <h3>Перфоратор BOSCH <br> BFG 9000</h3>
       <del>32500 Р.</del>
       <ins>25500 Р.</ins>
@@ -88,7 +92,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per2.png">
+      <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
       <h3>Перфоратор BOSCH <br> BFG 3000</h3>
       <del>22500 Р.</del>
       <ins>15500 Р.</ins>
@@ -96,7 +100,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per3.png">
+      <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
       <h3>Перфоратор BOSCH <br> BFG 6000</h3>
       <del>30500 Р.</del>
       <ins>25500 Р.</ins>
@@ -104,7 +108,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per4.png">
+      <img src="img/Per4.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
       <h3>Перфоратор BOSCH <br> BFG 2000</h3>
       <del>22500 Р.</del>
       <ins>12500 Р.</ins>
@@ -119,28 +123,28 @@
   <button type="button">Все производители</button>
   <ul>
     <li>
-      <a href="#"><img src="img/Proiz1.png"></a>
+      <a href="#"><img src="img/Proiz1.png" width="126" heigth="37" alt="Bosch"></a>
     </li>
     <li>
-      <a href="#"><img src="img/Makita1.png"></a>
+      <a href="#"><img src="img/Makita1.png" width="123" heigth="40" alt="Makita"></a>
     </li> 
     <li>
-      <a href="#"><img src="img/DeWALT.png"></a>
+      <a href="#"><img src="img/DeWALT.png" width="146" heigth="44" alt="DeWALT"></a>
     </li>
      <li>
-      <a href="#"><img src="img/Интерскол1.png"></a>
+      <a href="#"><img src="img/Интерскол1.png" width="200" heigth="75" alt="Interscol"></a>
     </li>
      <li>
-      <a href="#"><img src="img/Hitachi.png"></a>
+      <a href="#"><img src="img/Hitachi.png" width="169" heigth="31" alt="Hitachi"></a>
     </li>
      <li>
-      <a href="#"><img src="img/LG.png"></a>
+      <a href="#"><img src="img/LG.png" width="121" heigth="73" alt="LG"></a>
     </li>
      <li>
-      <a href="#"><img src="img/AEG.png"></a>
+      <a href="#"><img src="img/AEG.png" width="151" heigth="96" alt="AEG"></a>
     </li>
      <li>
-      <a href="#"><img src="img/Metabo.png"></a>
+      <a href="#"><img src="img/Metabo.png" width="204" heigth="69" alt="Metabo"></a>
     </li>
   </ul>
   </section>
@@ -190,18 +194,19 @@
           ЖелДорЭкспедиция
         </li>
       </ul>
-      <button type="button">Подробнее о компании</button>
+      <a href="#">Подробнее о компании</a>
   </section>
   <section>
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, <br>
       заехав в наш офис:</p>
       <!--	map placeholder	-->
-      <button type="button">Заблудились? Напишите нам</button>
+      <a href="#"><img src="img/Map.png" width="300" height="158" alt="Карта"></a>
+      <a href="#">Заблудились? Напишите нам</a>
   </section>
     </main>
   <footer>
-    <h2>Техномарт</h2>
+    <a href="#">Техномарт</a>
     <ul>
       <li><a href="#">Компания</a></li>
       <li><a href="#">Новости</a></li>
@@ -238,7 +243,7 @@
       Разработано -
       <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy.ru</a>
     </p>
-    
+    </section>
   </footer>
   </body>
 </html>
