--- a/index.html
+++ b/index.html
@@ -58,22 +58,27 @@
   <ul>
     <li>
       <h3>Материалы</h3> 
+      <img src="img/promo/material.svg" width="44" height="65">
       <a href="#">На любой вкус</a>
     </li>
     <li>
       <h3>Инструмент</h3> 
+      <img src="img/promo/instrument.svg" width="75" height="61">
       <a href="#">На все случаи</a>
     </li>
     <li>
       <h3>Техника</h3> 
+      <img src="img/promo/tech.svg" width="78" height="62">
       <a href="#">Для стройки</a>
     </li>
     <li>
       <h3>Скидки 50 %</h3> 
+      <img src="img/promo/discount.svg" width="59" height="72">
       <a href="#">На 350 товаров</a>
     </li>
     <li>
-      <h3>Доставка</h3> 
+      <h3>Доставка</h3>
+      <img src="img/promo/delivery.svg" width="78" height="63"> 
       <a href="#">Бесплатно</a>
     </li>
   </ul>
@@ -84,7 +89,7 @@
   <button type="button">Все популярные товары:</button>
   <ul>
     <li>
-      <img src="img/Per1.png" width="184" heigth="164" alt="Перфоратор BOSCH BFG 9000">
+      <img src="img/Per1.jpg" width="184" heigth="164" alt="Перфоратор BOSCH BFG 9000">
       <h3>Перфоратор BOSCH <br> BFG 9000</h3>
       <del>32500 Р.</del>
       <ins>25500 Р.</ins>
@@ -92,7 +97,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
+      <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
       <h3>Перфоратор BOSCH <br> BFG 3000</h3>
       <del>22500 Р.</del>
       <ins>15500 Р.</ins>
@@ -100,7 +105,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+      <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
       <h3>Перфоратор BOSCH <br> BFG 6000</h3>
       <del>30500 Р.</del>
       <ins>25500 Р.</ins>
@@ -108,7 +113,7 @@
       <button type="button">В закладки</button>
     </li>
     <li>
-      <img src="img/Per4.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
+      <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
       <h3>Перфоратор BOSCH <br> BFG 2000</h3>
       <del>22500 Р.</del>
       <ins>12500 Р.</ins>
@@ -172,7 +177,7 @@
       к вашему подъезду совершенно бесплатно!<br>
       Ведь мы неплохо заработаем, <br>
       поднимая его на ваш этаж!</p>
-      <img src="img/truck.svg" alt="truck" width="468" height="261">
+      <!--Фоновая картинка грузовика-->
       </section>
       </div>
   </section>
@@ -225,13 +230,22 @@
       <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
       <ul>
         <li>
-          <a href="#">Вконтакте</a>
+          <a href="#">
+            <span>Вконтакте</span>
+            <img src="img/icon-vk.svg" width="26" height="15" alt="vk">
+          </a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a href="#">
+            <span>Фейсбук</span>
+            <img src="img/icon-fb.svg" width="12" height="22" alt="facebook">
+          </a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a href="#">
+            <span>Инстаграм</span>
+            <img src="img/icon-insta.svg" width="21" height="21" alt="inst">
+          </a>
         </li>
       </ul>
     
