--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,7 @@
              <h3>Список перфораторов</h3>
              <ul>
                <li>
-                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -153,7 +153,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -161,7 +161,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -169,7 +169,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -177,7 +177,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -185,14 +185,14 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
+                <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                 <h3>Перфоратор BOSCH <br> BFG 3000</h3>
                 <del>22500 Р.</del>
                 <ins>15500 Р.</ins>
@@ -200,7 +200,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per3.png" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
+                <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                 <h3>Перфоратор BOSCH <br> BFG 6000</h3>
                 <del>30500 Р.</del>
                 <ins>25500 Р.</ins>
@@ -208,7 +208,7 @@
                 <button type="button">В закладки</button>
                </li>
                <li>
-                <img src="img/Per2.png" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
+                <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                 <h3>Перфоратор BOSCH <br> BFG 2000</h3>
                 <ins>12500 Р.</ins>
                 <button type="button">Купить</button>
@@ -262,13 +262,22 @@
               <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
               <ul>
                 <li>
-                  <a href="#">Вконтакте</a>
+                  <a href="#">
+                    <span>Вконтакте</span>
+                    <img src="img/icon-vk.svg" width="26" height="15" alt="vk">
+                  </a>
                 </li>
                 <li>
-                  <a href="#">Фейсбук</a>
+                  <a href="#">
+                    <span>Фейсбук</span>
+                    <img src="img/icon-fb.svg" width="12" height="22" alt="facebook">
+                  </a>
                 </li>
                 <li>
-                  <a href="#">Инстаграм</a>
+                  <a href="#">
+                    <span>Инстаграм</span>
+                    <img src="img/icon-insta.svg" width="21" height="21" alt="inst">
+                  </a>
                 </li>
               </ul>
             
