--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link rel="icon" href="favicon32.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/icons/32.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/icons/180.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -58,27 +58,22 @@
   <ul>
     <li>
       <h3>Материалы</h3> 
-      <img src="img/promo/material.svg" width="44" height="65">
       <a href="#">На любой вкус</a>
     </li>
     <li>
       <h3>Инструмент</h3> 
-      <img src="img/promo/instrument.svg" width="75" height="61">
       <a href="#">На все случаи</a>
     </li>
     <li>
       <h3>Техника</h3> 
-      <img src="img/promo/tech.svg" width="78" height="62">
       <a href="#">Для стройки</a>
     </li>
     <li>
       <h3>Скидки 50 %</h3> 
-      <img src="img/promo/discount.svg" width="59" height="72">
       <a href="#">На 350 товаров</a>
     </li>
     <li>
-      <h3>Доставка</h3>
-      <img src="img/promo/delivery.svg" width="78" height="63"> 
+      <h3>Доставка</h3> 
       <a href="#">Бесплатно</a>
     </li>
   </ul>
@@ -179,6 +174,22 @@
       поднимая его на ваш этаж!</p>
       <!--Фоновая картинка грузовика-->
       </section>
+      <section>
+        <h3>Гарантия</h3>
+        <p>Если купленный у нас товар поломается или заискрит,<br>
+         а также в случае пожара, спровоцированного его <br>
+         возгоранием,  вы всегда можете быть уверены в нашей <br>
+         гарантии. Мы обменяем сгоревший товар на новый.<br>
+         Дом уж восстановите как-нибудь сами.</p>
+          <!--Фоновая картинка гарантии-->
+          </section>
+          <section>
+            <h3>Кредит</h3>
+            <p>Залезть в долговую яму стало проще!<br>
+              Кредитные консультанты придут вам на помощь.</p>
+              <button type="button">Отправить заявку</button>
+              <!--Фоновая картинка кредит-->
+              </section>
       </div>
   </section>
   <section>
