--- a/catalog.html
+++ b/catalog.html
@@ -18,12 +18,16 @@
         <section class="main-menu">
             <a href="index.html" class="main-logo catalog-logo"><img src="img/logo-technomart.svg" width="108" height="18" alt="Лого"></a>
             <form action="#" method="get">
-                <input id="s-search" type="text" name="search" placeholder="Поиск:" class="search">
+                <label for="s-search">
+                    <!--<svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
+                    </svg>-->       
+                <input id="s-search" type="text" name="search" placeholder="Поиск:" class="search"></label>
             </form>
             <a href="#" class="user-link"><svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14 15C14 15.55 13.632 15.741 13.182 15.426L7.819 11.661C7.369 11.346 6.632 11.346 6.182 11.661L0.818 15.426C0.368 15.741 0 15.55 0 15V1C0 0.45 0.45 0 1 0H13C13.55 0 14 0.45 14 1V15Z" fill="white"/>
                 </svg>Закладки: <span>0</span></a>
-            <a href="#" class="user-link catalog-user-link"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="#" class="user-link user-link-full"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M4.5 15C5.32843 15 6 14.3284 6 13.5C6 12.6716 5.32843 12 4.5 12C3.67157 12 3 12.6716 3 13.5C3 14.3284 3.67157 15 4.5 15Z" fill="white"/>
                     <path d="M12.5 15C13.3284 15 14 14.3284 14 13.5C14 12.6716 13.3284 12 12.5 12C11.6716 12 11 12.6716 11 13.5C11 14.3284 11.6716 15 12.5 15Z" fill="white"/>
                     <path d="M15 2H4.07L3.648 0H0V2H2.031L4.016 11H15V9H9.441L15 6.951V2Z" fill="white"/>
@@ -32,33 +36,32 @@
         </section>
         <section>
             <p class="header-description">Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-            <a href="tel:+78125550555" class="header-phone"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="header-contacts">
+                <a href="tel:+78125550555" class="header-phone"><svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M15.572 18.985H14.631C10.502 18.497 7.47403 16.577 5.27203 14.121C3.06203 11.66 1.31803 8.49202 0.978027 4.22802V3.08402C1.05603 2.31002 1.43703 1.78002 1.87603 1.32702C2.42503 0.76602 3.25003 0.0440198 4.00203 0.0190198C4.55603 0.00101977 5.50203 0.39902 5.88103 0.91802C6.21003 1.36402 6.38503 2.25702 6.53703 2.92102C6.69103 3.59202 7.04203 4.56402 6.94503 5.21002C6.79703 6.21702 5.45803 6.64402 5.06603 7.37602C6.37303 10.511 8.50903 12.815 11.359 14.407C12.074 14.015 12.705 12.835 13.691 12.812C14.05 12.803 14.509 12.99 14.875 13.098C15.277 13.219 15.625 13.373 15.979 13.506C16.575 13.73 17.627 14.027 17.983 14.527C18.348 15.04 18.553 15.883 18.473 16.406C18.309 17.447 16.594 18.603 15.572 18.985Z" fill="#B7BFC8"/>
                 </svg>
                 +7 (812) 555-05-55</a>
-            <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+                <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            </div>
             <div class="profile">
+                <!--Я сделала 2 div,чтобы что-то было в качестве обертки-->
                 <a href="#" class="personal-page">
-                    <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg" class="person">
                         <path d="M17.881 14.166C15.737 13.431 13.625 12.5 12.674 11.776C12.017 11.275 11.904 10.158 12.157 9.361C13.275 8.458 14.021 6.884 14.021 5.083C14.021 2.276 12.221 0 10 0C7.77902 0 5.97901 2.276 5.97901 5.083C5.97901 6.884 6.72501 8.457 7.84201 9.36C8.09501 10.158 7.98302 11.275 7.32502 11.776C6.37502 12.5 4.26201 13.43 2.11801 14.166C-0.0259852 14.902 1.48343e-05 18 1.48343e-05 18H20C20 18 20.025 14.901 17.881 14.166Z" fill="#C5C5C5"/>
                         </svg> Равшан Джамшутович
-                    <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg" class="logout">
                         <path d="M20 8.5L11.125 0V6H5.125V11H11.125V17L20 8.5Z" fill="#C5C5C5"/>
                         <path d="M2.10604 13.952V3.048C2.12404 2.672 2.27704 1.991 3.11604 1.991H8.14304V0H3.11604C0.938036 0 0.112036 1.81 0.0870361 3.027V13.973C0.112036 15.189 0.938036 17 3.11604 17H8.14304V15.01H3.11604C2.27704 15.01 2.12404 14.327 2.10604 13.952Z" fill="#C5C5C5"/>
                         </svg>
                 </a>
-            </div>
-            <div class="personal-info">
-                <a href="#" class="personal-info-item">
+                <div class="personal-info">
+                    <a href="#" class="personal-info-item">
                      Мои заказы
                     </a>
-                <svg width="4" height="5" viewBox="0 0 4 5" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.00023 0.994136C3.09715 0.994136 3.98643 1.88356 3.98643 2.9801C3.98643 4.07757 3.09715 4.96646 2.00023 4.96646C0.903104 4.96646 0.013898 4.07757 0.013898 2.9801C0.013898 1.88356 0.903104 0.994136 2.00023 0.994136Z" fill="#32425C"/>
-                        </svg>
-
-                <a href="#" class="personal-info-item">
+                    <a href="#" class="personal-info-item">
                         Личный кабинет
                     </a>
+                </div>
             </div>
         </section>
         <nav class="navigation">
@@ -82,27 +85,20 @@
                     <path d="M13.831 6.365L12 4.751V0H9.99998V2.987L7.33198 0.635C7.31198 0.618 7.28898 0.612 7.26798 0.598C7.24294 0.579705 7.21614 0.56396 7.18798 0.551C7.15708 0.540195 7.12529 0.532163 7.09298 0.527C7.06198 0.521 7.03198 0.515 6.99998 0.515C6.96898 0.515 6.93898 0.521 6.90798 0.527C6.87551 0.531919 6.84366 0.5403 6.81298 0.552C6.78498 0.563 6.75998 0.581 6.73298 0.598C6.71198 0.612 6.68798 0.618 6.66898 0.635L0.170976 6.365C0.0162401 6.50291 -0.0375953 6.72187 0.0355474 6.9158C0.10869 7.10974 0.293707 7.23862 0.500976 7.24C0.622907 7.24035 0.740711 7.19586 0.831976 7.115L6.99998 1.677L13.169 7.115C13.3778 7.27913 13.6784 7.25178 13.8542 7.05265C14.0299 6.85352 14.0198 6.55183 13.831 6.365Z" fill="#C1C6CE"/>
                     </svg></a>
             </li>
-            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.23703 5.69316L1.72903 0.97116C1.53132 0.801687 1.21075 0.801687 1.01303 0.97116C0.815317 1.14063 0.815317 1.4154 1.01303 1.58487L6.16303 6.00002L1.01203 10.4143C0.826517 10.5855 0.832137 10.8518 1.02476 11.0171C1.21738 11.1825 1.52804 11.1876 1.72803 11.0289L7.23703 6.30687C7.33255 6.22575 7.38628 6.11527 7.38628 6.00002C7.38628 5.88476 7.33255 5.77429 7.23703 5.69316Z" fill="#C1C6CE"/>
-                </svg>
             <li>
                 <a href="catalog.html" class="catalog-pages-item">Каталог</a>
             </li>
-            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.23703 5.69316L1.72903 0.97116C1.53132 0.801687 1.21075 0.801687 1.01303 0.97116C0.815317 1.14063 0.815317 1.4154 1.01303 1.58487L6.16303 6.00002L1.01203 10.4143C0.826517 10.5855 0.832137 10.8518 1.02476 11.0171C1.21738 11.1825 1.52804 11.1876 1.72803 11.0289L7.23703 6.30687C7.33255 6.22575 7.38628 6.11527 7.38628 6.00002C7.38628 5.88476 7.33255 5.77429 7.23703 5.69316Z" fill="#C1C6CE"/>
-                </svg>
             <li>
                 <a href="#" class="catalog-pages-item">Инструмент</a>
             </li>
-            <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7.23703 5.69316L1.72903 0.97116C1.53132 0.801687 1.21075 0.801687 1.01303 0.97116C0.815317 1.14063 0.815317 1.4154 1.01303 1.58487L6.16303 6.00002L1.01203 10.4143C0.826517 10.5855 0.832137 10.8518 1.02476 11.0171C1.21738 11.1825 1.52804 11.1876 1.72803 11.0289L7.23703 6.30687C7.33255 6.22575 7.38628 6.11527 7.38628 6.00002C7.38628 5.88476 7.33255 5.77429 7.23703 5.69316Z" fill="#C1C6CE"/>
-                </svg>
             <li class="catalog-pages-item">
                 Перфораторы
             </li>
         </ul>
-        <h1 class="catalog-title">Перфораторы</h1>
-        <section>
+        <div class="catalog-title">
+            <h1 class="catalog-title-item">Перфораторы</h1>
+        </div>
+        <section class="all-filter">
             <h2 class="catalog-filter">Фильтр:</h2>
             <form method="get" action="https://echo.htmlacademy.ru" class="filter">
                 <fieldset>
@@ -185,7 +181,7 @@
         <section>
             <!--<h3>Список перфораторов</h3>-->
             <ul class="products-list">
-                <li class="catalog-products">
+                <li class="products-item">
                     <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 6000</h3>
                     <del class="price-before">30500 Р.</del>
@@ -193,7 +189,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item">
                     <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 6000</h3>
                     <del class="price-before">30500 Р.</del>
@@ -201,7 +197,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item flag-new">
                     <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 6000</h3>
                     <del class="price-before">30500 Р.</del>
@@ -209,7 +205,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item flag-new">
                     <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 3000</h3>
                     <del class="price-before">22500 Р.</del>
@@ -217,7 +213,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item">
                     <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 6000</h3>
                     <del class="price-before">30500 Р.</del>
@@ -225,14 +221,14 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item flag-new">
                     <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 2000</h3>
                     <ins class="price-after">12500 Р.</ins>
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item flag-new">
                     <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 3000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 3000</h3>
                     <del class="price-before">22500 Р.</del>
@@ -240,7 +236,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item">
                     <img src="img/Per3.jpg" width="144" heigth="128" alt="Перфоратор BOSCH BFG 6000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 6000</h3>
                     <del class="price-before">30500 Р.</del>
@@ -248,7 +244,7 @@
                     <button type="button" class="product-button-buy">Купить</button>
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
-                <li class="catalog-products">
+                <li class="products-item flag-new">
                     <img src="img/Per2.jpg" width="127" heigth="112" alt="Перфоратор BOSCH BFG 2000">
                     <h3 class="product-item-title">Перфоратор BOSCH <br> BFG 2000</h3>
                     <ins class="price-after">12500 Р.</ins>
@@ -256,22 +252,20 @@
                     <button type="button" class="product-button-save">В закладки</button>
                 </li>
             </ul>
-            <div class="pages-list">
-                <ul>
-                    <li>
-                        <a class="item-pages item-pages-selected">1</a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-pages">2</a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-pages">3</a>
-                    </li>
-                    <li>
-                        <a href="#" class="item-pages item-pages-next">Следующая</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="pagination">
+                <li class="pagination-item">
+                    <a class="page-item item-pages-selected">1</a>
+                </li>
+                <li class="pagination-item">
+                    <a href="#" class="page-item">2</a>
+                </li>
+                <li class="pagination-item">
+                    <a href="#" class="page-item">3</a>
+                </li>
+                <li class="pagination-item item-pages-next">
+                    <a href="#" class="page-item">Следующая</a>
+                </li>
+            </ul>
         </section>
         <section class="about-perf">
             <h3 class="about-perf-title">Пара слов о перфораторах</h3>
@@ -328,12 +322,20 @@
             </p>
         </section>
     </footer>
-    <section>
-        <h2>Добавление в корзину</h2>
-        <p>Товар добавлен в корзину!</p>
-        <button type="button">Оформить заказ</button>
-        <button type="button">Продолжить покупки</button>
-        <button type="button">Закрыть</button>
+    <section class="basket">
+        <!--<h2>Добавление в корзину</h2>-->
+        <svg width="66" height="66" viewBox="0 0 66 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M33 66C51.2254 66 66 51.2254 66 33C66 14.7746 51.2254 0 33 0C14.7746 0 0 14.7746 0 33C0 51.2254 14.7746 66 33 66Z" fill="#63A63E"/>
+            <path d="M49.641 21.066C49.2498 20.6773 48.6181 20.6773 48.227 21.066L29.788 39.504C29.3968 39.8927 28.7651 39.8927 28.374 39.504L20.234 31.365C19.8428 30.9763 19.2111 30.9763 18.82 31.365L15.285 34.9C14.8962 35.2912 14.8962 35.9228 15.285 36.314L28.374 49.404C28.7651 49.7927 29.3968 49.7927 29.788 49.404L33.324 45.868L34.738 44.454L53.176 26.016C53.5647 25.6248 53.5647 24.9932 53.176 24.602L49.641 21.066Z" fill="white"/>
+            </svg>
+        <p class="basket-title">Товар добавлен в корзину!</p>
+        <a href="#"><svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.2729 10.5L20.6949 3.07799C21.0839 2.68899 21.0839 2.05299 20.6949 1.66399L19.3359 0.304995C18.9469 -0.0840054 18.3109 -0.0840054 17.9219 0.304995L10.4999 7.72699L3.07793 0.304995C2.68893 -0.0840054 2.05293 -0.0840054 1.66393 0.304995L0.304934 1.66399C-0.0840664 2.05299 -0.0840664 2.68899 0.304934 3.07799L7.72693 10.5L0.305934 17.922C-0.0830664 18.311 -0.0830664 18.947 0.305934 19.336L1.66493 20.695C2.05393 21.084 2.68993 21.084 3.07893 20.695L10.5009 13.273L17.9229 20.695C18.3119 21.084 18.9479 21.084 19.3369 20.695L20.6959 19.336C21.0849 18.947 21.0849 18.311 20.6959 17.922L13.2729 10.5Z" fill="#EE3643"/>
+            </svg></a>
+        <div class="basket-buttons">
+            <a href="#" class="basket-order">Оформить заказ</a>
+            <a href="#" class="basket-continue">Продолжить покупки</a>
+        </div>
     </section>
 </body>
 
